# toys

rust_toys/toy1/: Cargo.toml
rust_toys/toy1/src/: main.rs
rust_toys/toy_string/: Cargo.toml  Makefile
rust_toys/toy_string/src/: gen_cph.rs  lib.rs  main.cc  main.rs  qsplit.h  qsplit.rs
rust_toys/toy_string/src/ffi/: mod.rs  qsplit_ts.h
