[package]
name = "toy_string"
version = "0.1.0"
authors = ["noname"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5.4"
libc = "0.2.67"
log = "0.4.0"
env_logger = "0.6.0"
chrono = "0.4.11"
rand = "0.7.3"

[lib]
name = "qsplit"
crate-type = ["dylib"]